--- a/bitacora.html
+++ b/bitacora.html
@@ -30,7 +30,7 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/">Linkedin</a></li>
-						<li><a href="sobremi.html">Experiencia Profesional</a></li>
+						<li><a href="sobremi.html">Sobre mi</a></li>
 						<li><a href="bitacora.html">Bitacora Digital</a></li>
 						<li><a href="portafolio.html">Portafolio de Proyectos</a></li>
 						<li><a href="contenteducativo.html">Contenido Educativo</a></li>
@@ -107,7 +107,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Semana 06</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 06</a></h3>
 										<p>Información sobre las clases de la semana 06</p>
 									</header>
 								</article>
@@ -116,7 +116,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Semana 07</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 07</a></h3>
 										<p>Información sobre las clases de la semana 07</p>
 									</header>
 								</article>
@@ -125,7 +125,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Semana 08</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 08</a></h3>
 										<p>Información sobre las clases de la semana 08</p>
 									</header>
 								</article>
@@ -134,7 +134,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Semana 09</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 09</a></h3>
 										<p>Información sobre las clases de la semana 09</p>
 									</header>
 								</article>
@@ -143,7 +143,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Semana 10</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 10</a></h3>
 										<p>Información sobre las clases de la semana 10</p>
 									</header>
 								</article>
@@ -152,7 +152,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Semana 11</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 11</a></h3>
 										<p>Información sobre las clases de la semana 11</p>
 									</header>
 								</article>
@@ -161,7 +161,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Semana 12</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 12</a></h3>
 										<p>Información sobre las clases de la semana 12</p>
 									</header>
 								</article>
@@ -177,7 +177,7 @@
 										<h2>Contáctame</h2>
 									</header>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Whatsapp</a></li>
+										<li><a href="https://wa.link/anrr4x" class="button next">Whatsapp</a></li>
 									</ul>
 						</div>
 					</section>
