--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 							<li><a href="sobremi.html">Sobre mi</a></li>
 							<li><a href="bitacora.html">Bitacora Digital</a></li>
 							<li><a href="portafolio.html">Portafolio de Proyectos</a></li>
-							<li><a href="contenteducativo.html">Contenido Educativo</a></li>
-							<li><a href="articulos.html">Artículos</a></li>
-							<li><a href="publicaciones.html">Publicaciones</a></li>
+							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Contenido Educativo</a></li>
+							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Artículos</a></li>
+							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Publicaciones</a></li>
 							<li><a href="https://drive.google.com/file/d/1pD9bxJx1IS2u3gzXIKj7o7Xhn93G9nKN/view">Proyecto Personal</a></li>
 						</ul>
 						<!--
@@ -127,11 +127,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Proyecto Personal</h2>
+										<h2>Sobre mi</h2>
 									</header>
-									<p>En la actualidad vengo trabajando en el proyecto E+D para evitar más residuos. Realice un análisis de datos basados en Dataset brindados por le Ministerio del Ambiente para ofrecer tres enfoques de solución basadas en la obtención de datos mediante una aplicación para que podamos visualizar datos en tiempo real representados por Dashboard. Además, podemos sumar una Inteligencia Artificial que aproveche la BB.DD. para brindarnos predicciones en la toma de decisiones, como también, sumar la BB.DD y la I.A. para seguir sumando hasta volver una Super-App.</p>
+									<p>Estudiante de Arquitectura de Interiores cursando el 7mo ciclo,  con un excelente manejo de herramientas de diseño especialmente en AutoCAD, Sketchup y Vray. Soy una persona responsable, dedicada y con un amor por el diseño lo cual me impulsa a mejorar cada dia </p>
 									<ul class="actions">
-										<li><a href="https://drive.google.com/file/d/1p87cvogVSn7_vUFWK0AfNX4uEmA0pYys/view?usp=sharing" class="button next">Mira el proyecto aquí</a></li>
+										<li><a href="https://drive.google.com/file/d/1pD9bxJx1IS2u3gzXIKj7o7Xhn93G9nKN/view" class="button next">Mira el proyecto aquí</a></li>
 									</ul>
 								</div>
 							</section>
@@ -147,7 +147,7 @@
 										<h2>Contáctame</h2>
 									</header>
 									<ul class="actions">
-										<li><a href="https://w.app/MecinHomeSAC" class="button next">Whatsapp</a></li>
+										<li><a href="https://wa.link/anrr4x" class="button next">Whatsapp</a></li>
 									</ul>
 									<!--<div class="fields">
 										<div class="field half">
@@ -202,7 +202,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
-								<li><a href="https://www.facebook.com/OsKR.KsTiLlOoO/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.facebook.com/profile.php?id=100069150849794" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/alejandronaveda/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/Nevervoker" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/oscarcastillon/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
