--- a/sobremi.html
+++ b/sobremi.html
@@ -29,14 +29,14 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="https://www.linkedin.com/in/oscarcastillon/">Linkedin</a></li>
-						<li><a href="sobremi.html">Sobre mi</a></li>
-						<li><a href="bitacora.html">Bitacora Digital</a></li>
-						<li><a href="portafolio.html">Portafolio de Proyectos</a></li>
-						<li><a href="contenteducativo.html">Contenido Educativo</a></li>
-						<li><a href="articulos.html">Artículos</a></li>
-						<li><a href="publicaciones.html">Publicaciones</a></li>
-						<li><a href="https://drive.google.com/file/d/1p87cvogVSn7_vUFWK0AfNX4uEmA0pYys/view?usp=sharing">Proyecto Personal</a></li>
+							<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/">Linkedin</a></li>
+							<li><a href="sobremi.html">Sobre mi</a></li>
+							<li><a href="bitacora.html">Bitacora Digital</a></li>
+							<li><a href="portafolio.html">Portafolio de Proyectos</a></li>
+							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Contenido Educativo</a></li>
+							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Artículos</a></li>
+							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Publicaciones</a></li>
+							<li><a href="https://drive.google.com/file/d/1pD9bxJx1IS2u3gzXIKj7o7Xhn93G9nKN/view">Proyecto Personal</a></li>
 					</ul>
 				</nav>
 
