--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="contenteducativo.html" class="link">Contenido Educativo</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Contenido Educativo</a></h3>
 										<p>Te comparto mis vídeos donde te enseño sobre diversos temas tecnológicos</p>
 									</header>
 								</article>
@@ -108,7 +108,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="articulos.html" class="link">Artículos</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Artículos</a></h3>
 										<p>Mi portafolio de artículos principales</p>
 									</header>
 								</article>
@@ -117,7 +117,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="publicaciones.html" class="link">Publicaciones</a></h3>
+										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Publicaciones</a></h3>
 										<p>Gestión de Proyectos, Tecnología, Negocios, Educación y Hábitos Saludables</p>
 									</header>
 								</article>
@@ -203,9 +203,9 @@
 							<ul class="icons">
 								<!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>-->
 								<li><a href="https://www.facebook.com/profile.php?id=100069150849794" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/alejandronaveda/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/Nevervoker" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/oscarcastillon/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.instagram.com/sergio.pino0215/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/Nedcito" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<!--</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
