--- a/Semana 05.html
+++ b/Semana 05.html
@@ -99,6 +99,9 @@
 								<section>
 									<a class="image">
 										<img src="images/S5P.jpg" alt="" data-position="top center" />
+										<img src="images/S5P2.jpg" alt="" data-position="top center" />
+										<img src="images/S5P3.png" alt="" data-position="top center" />
+
 									
 									</a>
 									<div class="content">
@@ -106,7 +109,9 @@
 											<header class="major">
 												<h3>Clase Presencial</h3>
 											</header>
-											<p>COMING SOON...<p>
+											<p>Esta clase fue la siguiente a la entrega final de promedio y el profesor nos hizo algunas observaciones a nuestras entregas y tambien nos felicito de cierta manera por el avance que tuvimos en nuestra bitacora ya que como el dijo al rededor del 90% entrego con exito y aprobo la bitacora. <p>
+												<p>Una vez terminada esta pequeña critica el profesor nos empezo a enseñar sobre la creacion de una pagina web, todo lo que conlleva y se necesita como el hosting, dominio, para luego pasar a mostrarnos Google Sites que es una plataforma de google en la cual se puede crear una pagina web de manera bastante dinamica y facil de entender para una persona sin ningun tipo de experiencia en la creacion de una pagina web, ya que nos permite mediante de una barra de herramientas ir agregando imagenes, videos, textos entre otras muchas cosas mas <p>
+													<p>Ya para finalizar el profesor nos enseño algunas otras opciones de creadores de paginas webs mediante inteligencia artificial como podria ser Wix, que es por la cual mi grupo optara ya que es bastante simple, consiste en ir contestando preguntas a la IA para que luego te arroge posibles diseños y al final tu escojas el que es de tu mayor agrado. Tambien nos enseño herramientas de inteligencia artificial que nos facilitarian y agilizarian mucho el trabajo, ya que son capaces de generar imagenes, videos todo mediante PROMPS<p></p>
 											
 											<!--
 											<ul class="actions">
