--- a/bitacora.html
+++ b/bitacora.html
@@ -107,7 +107,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 06</a></h3>
+										<h3><a href="Semana 06.html" class="link">Semana 06</a></h3>
 										<p>Información sobre las clases de la semana 06</p>
 									</header>
 								</article>
@@ -116,7 +116,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 07</a></h3>
+										<h3><a href="Semana 07.html" class="link">Semana 07</a></h3>
 										<p>Información sobre las clases de la semana 07</p>
 									</header>
 								</article>
@@ -125,7 +125,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 08</a></h3>
+										<h3><a href="Semana 08.html" class="link">Semana 08</a></h3>
 										<p>Información sobre las clases de la semana 08</p>
 									</header>
 								</article>
@@ -134,7 +134,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 09</a></h3>
+										<h3><a href="Semana 09.html" class="link">Semana 09</a></h3>
 										<p>Información sobre las clases de la semana 09</p>
 									</header>
 								</article>
@@ -143,7 +143,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 10</a></h3>
+										<h3><a href="Semana 10.html" class="link">Semana 10</a></h3>
 										<p>Información sobre las clases de la semana 10</p>
 									</header>
 								</article>
