--- a/bitacora.html
+++ b/bitacora.html
@@ -29,14 +29,11 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-							<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/">Linkedin</a></li>
-							<li><a href="sobremi.html">Sobre mi</a></li>
-							<li><a href="bitacora.html">Bitacora Digital</a></li>
-							<li><a href="portafolio.html">Portafolio de Proyectos</a></li>
-							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Contenido Educativo</a></li>
-							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Artículos</a></li>
-							<li><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk">Publicaciones</a></li>
-							<li><a href="https://drive.google.com/file/d/1pD9bxJx1IS2u3gzXIKj7o7Xhn93G9nKN/view">Proyecto Personal</a></li>
+						<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/">Linkedin</a></li>
+						<li><a href="sobremi.html">Sobre mi</a></li>
+						<li><a href="bitacora.html">Bitacora Digital</a></li>
+						<li><a href="portafolio.html">Portafolio de Proyectos</a></li>					
+						<li><a href="https://drive.google.com/file/d/1pD9bxJx1IS2u3gzXIKj7o7Xhn93G9nKN/view">Proyecto Personal</a></li>
 					</ul>
 				</nav>
 
@@ -152,7 +149,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 11</a></h3>
+										<h3><a href="Semana 11.html" class="link">Semana 11</a></h3>
 										<p>Información sobre las clases de la semana 11</p>
 									</header>
 								</article>
@@ -161,7 +158,7 @@
 										<img src="#" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://www.youtube.com/watch?v=mCdA4bJAGGk" class="link">Semana 12</a></h3>
+										<h3><a href="Semana 12.html" class="link">Semana 12</a></h3>
 										<p>Información sobre las clases de la semana 12</p>
 									</header>
 								</article>
