--- a/Semana 07.html
+++ b/Semana 07.html
@@ -84,8 +84,8 @@
 											<header class="major">
 												<h3>Clase Presencial</h3>
 											</header>
-											<p>hola<p>
-												
+											<p>En esta clase el profesor nos dio una explicacion breve sobre lo que seria programacion en ARDUINO IDE y sus terminologias, tambien sobre la importancia de las metricas y el como debemos realizarlas para tener una mejor vision de nuestro proyecto y problematica a solucionar. <p>
+												<p>Tambien nos explico sobre los tipos de programacion que habian los CODE que es practicamente programar sabiendo que palabras y terminos utilizar para llegar a un resultado, NO CODE que seria programacion sin codigo como ejemplo google sites, y tambien otra alternativa que no abarcamos mucho pero se veia interesante que era programacion en bloques. <p></p>
 											
 											<!--
 											<ul class="actions">
