--- a/bitacora.html
+++ b/bitacora.html
@@ -162,6 +162,33 @@
 										<p>Información sobre las clases de la semana 12</p>
 									</header>
 								</article>
+								<article>
+									<span class="image">
+										<img src="#" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="Semana 13.html" class="link">Semana 12</a></h3>
+										<p>Información sobre las clases de la semana 12</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="#" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="Semana 14.html" class="link">Semana 12</a></h3>
+										<p>Información sobre las clases de la semana 12</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="#" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="Semana 15.html" class="link">Semana 12</a></h3>
+										<p>Información sobre las clases de la semana 12</p>
+									</header>
+								</article>
 							</section>
 
 
