--- a/Semana 13.html
+++ b/Semana 13.html
@@ -48,7 +48,7 @@
 								<h1>Semana 13</h1>
 							</header>
 							<div class="content">
-								<p>Hablemos un poco sobre la semana 12<br />
+								<p>Hablemos un poco sobre la semana 13<br />
 								Imprimiendo y cortando</p>
 							</div>
 						</div>
@@ -63,7 +63,7 @@
 									<header class="major">
 										<h2>Detallando el diseño </h2>
 									</header>
-									<p>En esta semana ya se empezo a cortar e imprimir la estructura del proy</p>
+									<p>En esta semana ya se empezo a cortar e imprimir la estructura del proyecto</p>
 								</div>
 							</section>
 
