--- a/bitacora.html
+++ b/bitacora.html
@@ -189,8 +189,12 @@
 							<section>
 								<form method="post" action="#">
 									<header class="major">
-										<h2>Contáctame</h2>
+										<h2>Justificacion de diseño de pagina web </h2>
 									</header>
+									<p>La razon por la cual opte por usar esta plantilla para el diseño de la pagina web fueron factores de, utilidad, personalidad, gustos personales ya que al ser una plantilla recomendada por el profesor, al yo no tener nada de experiencia en html y css, se me haria sencillo en alguna de las clases si algo no sabia como hacerlo poder consultar al profesor para que pueda ayudarme con ello.
+										Tambien consiedere el diseño de la misma pagina ya que era bastante sencilla y a mi gusto era algo minimalista y esas son algunas de las caracteristicas de las cosas que me gusta a mi en mis trabajos o aspectos de mi vida de esta forma tambien se me facilitaba centrar mi informacion en los puntos mas importantes que era para mi el "Sobre mi, Bitacora digital, Portafolio de proyectos" ya que lo demas podian ser añadidos pero no lo principal que me gustari que vea cualquier visitante de mi pagina web.
+										 
+									</p>
 									<ul class="actions">
 										<li><a href="https://wa.link/anrr4x" class="button next">Whatsapp</a></li>
 									</ul>
