--- a/Semana 14.html
+++ b/Semana 14.html
@@ -109,6 +109,8 @@
 											<p>En la ultima clase presencial el profesro nos brindo una breve explicacion de lo que son la realidad virtual y tambien durante el resto de la clase se encargo de dar un feedback a cada uno de los grupos para ver cual era su nivel de avance y criticar todos los avances que tenian los grupos hasta ese momento
 												En el caso de nuestro grupo teniamos gran parte de las cosas ya hechas y solo faltaba imprimir y cortar pero durante el transcurso de la semana fuimos a hacer los cortes en laser y armamos la estructura de la lampara, solo faltaria pulir algunos detalles decorativos para darle un poco mas de personalidad y acabado a lo que seria la lampara que estamos trabajando en grupo<p>
 												
+
+
 											
 											<!--
 											<ul class="actions">
@@ -176,7 +178,13 @@
 						</div>
 					</section>
 				-->
-
+				<div class="content">
+					<div class="inner">
+						<header class="major">
+							<h3>Conclusiones del curso</h3>
+						</header>
+						<p>Lamentablemente en laboratorio 1 ya sea por temas de tiempo o por otros factores fuera del control del docente o de los alumnos no se pudieron abarcar alguna de las cosas necesarias para este curso pero considero que, aunque exigente y recto el profesor fue justo en todo aspecto del curso. Me quedo satisfecho con lo conseguido ya que para mi ya es un logro haber podido programar una pagina web, programar un sistema en arduino, aprender de muchas cosas mas como de las inteligencias arficiales y de cierta manera llegar a cambiar un poco mi mentalidad sobre los temas de la actualidad en base a la programacion para mi desarrollo como profesional.
+							Termino mi ciclo contento por lo que logre y por lo que aprendi, aunque no todo sale siempre como uno espera ya sea en clase o con respecto a temas personales de cada persona sean de parte mia, compañeros o docente, ya que nadie es perfecto y tiene errores, lo importante es saber sobrellevarlos y dar lo mejor de cada uno este en la situacion que este. Gracias por todo lo aprendido este ciclo profesor. <p>
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
