--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/SOBREMICRIPTO.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="sobremi.html" class="link">About me</a></h3>
@@ -75,7 +75,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/S14P1.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="bitacora.html" class="link">Bitácora Digital</a></h3>
@@ -84,13 +84,14 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/BITACORAFONDO.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="portafolio.html" class="link">Portafolio de Proyectos</a></h3>
-										<p>Te comparto todos los proyectos que enseño en Mec in Home</p>
+										<h3><a href="bitacora.html" class="link">Portafolio de proyectos</a></h3>
+										<p>Aquí te presento los mejores proyectos de mi portafolio realizados unicamente por mi</p>
 									</header>
 							 
+								
 								</article>
 							</section>
 
