--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										<img src="images/BITACORAFONDO.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="bitacora.html" class="link">Portafolio de proyectos</a></h3>
+										<h3><a href="portafolio.html" class="link">Portafolio de proyectos</a></h3>
 										<p>Aquí te presento los mejores proyectos de mi portafolio realizados unicamente por mi</p>
 									</header>
 							 
